--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -77,7 +77,7 @@ body .section-grey2 {
 body .section-bg1 {
   width: 100%;
   position: relative;
-  background: url(/assets/images/section-bg-1.jpg);
+  background: url(../images/bgr_section1.jpg);
   padding: 11rem 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
