--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -61,7 +61,7 @@ body {
   .section-bg1 {
     width: 100%;
     position: relative;
-    background: url(../images/bgr_section1.jpg);
+    background: url(../images/section-bg-1.jpg);
     padding: 11rem 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
