--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -7,7 +7,7 @@
     --color-text-grey: #7c8595;
     --color-text-main: #071e55;
     --bgr-color-grey: #f1faff;
-
+    --color-green:  #27b36a;
 }
 
 
