--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,13 +1,17 @@
 :root{
-    --font-size-default: 1.8rem;
-    --border-radius-btn: 3rem;  
+    --font-size-default: 1.7rem;
+    --border-radius-btn: 2.5rem;
+    --border-card: 0.7rem;  
     --color-red: #e52f37;
     --color-input: #f9f9f9;
-    --border-card: 0.7rem;
     --color-text-grey: #7c8595;
+    --color-text-grey2:#acacac;
+    --color-text-grey3:#6a6a6a;
     --color-text-main: #071e55;
     --bgr-color-grey: #f1faff;
     --color-green:  #27b36a;
+
+
 }
 
 
