--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -64,6 +64,7 @@ body .section-bg-default {
   width: 100%;
   position: relative;
   color: #fff;
+  background: url(../images/section-bg-1.jpg) no-repeat top center fixed;
 }
 body .section-home {
   width: 100%;
@@ -87,23 +88,14 @@ body .section-grey {
 body .section-grey2 {
   background-color: var(--bgr-color-grey);
 }
-body .section-bg1 {
-  background: url(../images/section-bg-1.jpg) no-repeat top center fixed;
-}
 body .section-grey3 {
   background-color: var(--bgr-color-grey);
 }
 body .section-grey4 {
   background-color: var(--bgr-color-grey);
 }
-body .section-bg2 {
-  background: url(../images/section-bg-1.jpg) no-repeat top center fixed;
-}
 body .section-grey5 {
   background-color: var(--bgr-color-grey);
-}
-body .section-bg3 {
-  background: url(../images/section-bg-1.jpg) no-repeat fixed cover top center;
 }
 body footer {
   width: 100%;
@@ -464,7 +456,7 @@ nav .navbar-toggler {
 .container-grey2 img {
   width: 48%;
   border-radius: var(--border-card);
-  box-shadow: 10px 12px 40px rgba(0, 0, 0, 0.2);
+  box-shadow: 1rem 1.2rem 4rem rgba(0, 0, 0, 0.2);
 }
 .container-grey2 .container-grey2__content {
   width: 48%;
@@ -635,6 +627,7 @@ nav .navbar-toggler {
   font-weight: 600;
   line-height: 1.6;
   display: none;
+  transition: 0.3s;
 }
 
 .card-header .card-header__button {
@@ -1364,14 +1357,13 @@ footer .footer-container {
     cursor: pointer;
   }
   .nav__left {
-    position: absolute;
+    position: fixed;
     top: 7rem;
-    left: 0;
+    left: -100%;
     right: 0;
     background-color: #fff;
     width: 100%;
-    transition: 0.5s;
-    opacity: 0;
+    transition: 0.3s;
   }
   .nav__left .nav_left--item {
     display: flex;
@@ -1381,7 +1373,6 @@ footer .footer-container {
     -moz-column-gap: 3rem;
          column-gap: 3rem;
     padding-left: 12.5%;
-    transition: 0.5s;
   }
   .nav_left--item .nav__left--btn a {
     padding: 1rem;
@@ -1390,10 +1381,11 @@ footer .footer-container {
     padding: 2rem 0;
   }
   .nav__left.active {
-    height: 40rem;
+    height: 34rem;
+    left: 0;
   }
   .nav__left.active {
-    opacity: 1;
+    display: block;
   }
 }
 @media (max-width: 960px) {
