--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -2,6 +2,7 @@
 @import "_mixins.scss";
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 li {
   list-style: none;
@@ -17,6 +18,8 @@ body {
   box-sizing: border-box;
   font-family: "Nunito", sans-serif;
   font-size: 62.5%;
+  scroll-behavior: smooth;
+
 
   header {
     width: 100%;
@@ -625,8 +628,9 @@ nav {
     font-weight: 600;
     line-height: 1.6;
     display: none;
-    transition: 0.3s;
+    transition: 0.5s ease;
   }
+
 }
 .card-header {
   .card-header__button {
@@ -1339,12 +1343,13 @@ footer {
   // btn hambuger
   .nav__left {
     position: fixed;
-    top: 7rem;
-    left: -100%;
+    top:7rem;
+    left: 0;
     right: 0;
     background-color: #fff;
     width: 100%;
     transition: 0.3s;
+
   }
   .nav__left {
     .nav_left--item {
@@ -1352,6 +1357,7 @@ footer {
       flex-direction: column;
       column-gap: 3rem;
       padding-left: 12.5%;
+      padding-bottom: 2rem;
     }
   }
   .nav_left--item {
@@ -1364,7 +1370,8 @@ footer {
   }
   .nav__left.active {
     height: 34rem;
-    left: 0;
+    top:-50%;
+    // visibility: hidden;
   }
   .nav__left.active {
     display: block;
