--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,6 +25,10 @@ a {
   text-decoration: none;
 }
 
+a:visited {
+  color: var(--color-text-main);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -33,7 +37,6 @@ body {
   box-sizing: border-box;
   font-family: "Nunito", sans-serif;
   font-size: 62.5%;
-  scroll-behavior: smooth;
 }
 body header {
   width: 100%;
@@ -110,7 +113,7 @@ body footer {
 header nav {
   width: 100%;
   height: auto;
-  margin: 0 12.5%;
+  margin: 1rem 12.5%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -119,9 +122,10 @@ header nav {
 }
 
 nav .nav__right {
-  font-size: 2.5rem;
+  font-size: 2.7rem;
   color: var(--color-red);
   font-weight: 600;
+  cursor: pointer;
 }
 nav .navbar-toggler {
   display: none;
@@ -131,14 +135,14 @@ nav .navbar-toggler {
   display: flex;
   justify-content: normal;
   align-items: center;
-  gap: 1.3rem;
+  gap: 3rem;
 }
 
 .nav_left--item li {
   list-style: none;
 }
-.nav_left--item li:hover {
-  transition: all 0.5s ease;
+.nav_left--item a:hover {
+  transition: all 0.2s ease;
   color: var(--color-red);
   cursor: pointer;
 }
@@ -1330,22 +1334,6 @@ footer .footer-container {
     transform: scale(1);
   }
 }
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 @media (max-width: 1010px) {
   .navbar-toggler {
     display: block !important;
@@ -1358,36 +1346,32 @@ footer .footer-container {
     border-radius: 0.3rem;
     cursor: pointer;
   }
-  .nav__left {
+  nav .nav__left {
     position: fixed;
     top: 7rem;
     left: 0;
     right: 0;
     background-color: #fff;
     width: 100%;
-    transition: 0.3s;
+    display: none;
   }
   .nav__left .nav_left--item {
     display: flex;
     justify-content: normal;
     align-items: flex-start;
     flex-direction: column;
-    -moz-column-gap: 3rem;
-         column-gap: 3rem;
     padding-left: 12.5%;
     padding-bottom: 2rem;
+    gap: 1.2rem;
   }
-  .nav_left--item .nav__left--btn a {
+  .nav_left--item .nav__left--btn {
+    margin-top: 1rem;
+  }
+  .nav__left--btn a {
     padding: 1rem;
-  }
-  nav {
-    padding: 2rem 0;
   }
   .nav__left.active {
     height: 34rem;
-    top: -50%;
-  }
-  .nav__left.active {
     display: block;
   }
 }
